control window now uses svg with jsgl instead of canvas, control window can visualize current drawings, background stream to show camera if wall is being filmed

--- a/style.css
+++ b/style.css
@@ -96,6 +96,23 @@ body {
 	margin-bottom: 5px;
 }
 
-#canvas {
-	border: 1px solid white;
+#mapping {
+	position: relative;
+}
+
+#digitalstream {
+	position: relative;
+	z-index: 100;
+	background: white;
+	opacity: 0.5;
+}
+
+#panel_mapping, #panel_drawing {
+	position: absolute !important;
+}
+
+#stream {
+	position: absolute;
+	z-index: 1;
+	overflow: hidden;
 }
