--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 	background: black;
 	margin:0;
 	padding:0;
+	font-family: Verdana;
 }
 
 #newcolor {
@@ -68,7 +69,6 @@ body {
 
 #help td {
 	color: white;
-	font-family: Verdana;
 	padding-left:10px;
 	vertical-align:top;
 }
@@ -115,4 +115,29 @@ body {
 	position: absolute;
 	z-index: 1;
 	overflow: hidden;
+}
+
+.msg {
+	display: none;
+	position: absolute;
+	bottom: 10px;
+	margin: 10px;
+	padding: 5px;
+	background: black;
+	color: white;
+	box-shadow: 0px 0px 8px 3px rgba(255, 255, 255, 0.85);
+	-moz-box-shadow: 0px 0px 8px 3px rgba(255, 255, 255, 0.85);
+	-webkit-box-shadow: 0px 0px 8px 3px rgba(255, 255, 255, 0.85);
+}
+
+.msg.error {
+	box-shadow: 0px 0px 8px 3px rgba(255, 0,0, 0.85);
+	-moz-box-shadow: 0px 0px 8px 3px rgba(255, 0,0, 0.85);
+	-webkit-box-shadow: 0px 0px 8px 3px rgba(255, 0,0, 0.85);	
+}
+
+.msg.success {
+	box-shadow: 0px 0px 8px 3px rgba(0,255,0, 0.85);
+	-moz-box-shadow: 0px 0px 8px 3px rgba(0,255,0, 0.85);
+	-webkit-box-shadow: 0px 0px 8px 3px rgba(0,255,0, 0.85);	
 }
