--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ body {
 	font-family: Verdana;
 }
 
+a {
+	color: inherit;
+}
+
 #newcolor {
 	border-right:10px solid black;
 	width:80px;
@@ -127,25 +131,21 @@ body {
 }
 
 .msg {
-	position: absolute;
-	bottom: 10px;
-	margin: 10px;
-	padding: 5px;
+	position: relative;
+	max-width: 500px;
+	margin: 20px auto 0 auto;
+	padding: 10px;
 	background: black;
 	color: white;
-	box-shadow: 0px 0px 8px 3px rgba(255, 255, 255, 0.85);
-	-moz-box-shadow: 0px 0px 8px 3px rgba(255, 255, 255, 0.85);
-	-webkit-box-shadow: 0px 0px 8px 3px rgba(255, 255, 255, 0.85);
+	border: 10px solid rgba(255, 255, 255, 0.85);
+	font-size: 110%;
+	line-height: 1.6;
 }
 
 .msg.error {
-	box-shadow: 0px 0px 8px 3px rgba(255, 0,0, 0.85);
-	-moz-box-shadow: 0px 0px 8px 3px rgba(255, 0,0, 0.85);
-	-webkit-box-shadow: 0px 0px 8px 3px rgba(255, 0,0, 0.85);	
+	border: 10px solid rgba(255, 0,0, 0.85);
 }
 
 .msg.success {
-	box-shadow: 0px 0px 8px 3px rgba(0,255,0, 0.85);
-	-moz-box-shadow: 0px 0px 8px 3px rgba(0,255,0, 0.85);
-	-webkit-box-shadow: 0px 0px 8px 3px rgba(0,255,0, 0.85);	
+	border: 10px solid rgba(0,255,0, 0.85);
 }
